# scissy

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  dist.sh  tasks.org
bluegitf/: CMakeLists.txt  acl.cc  acl.hh  acl.proto  bluegitfd.cc  clear-cache-handler.cc  clear-cache-handler.hh  config.cc  config.hh  db.cc  db.hh  group-detail-handler.cc  group-detail-handler.hh  groups-handler.cc  groups-handler.hh  groups.cc  groups.hh  load-tpl.cc  load-tpl.hh  log.cc  log.hh  login-handler.cc  login-handler.hh  logout-handler.cc  logout-handler.hh  main.cc  new-group-handler.cc  new-group-handler.hh  new-repo-handler.cc  new-repo-handler.hh  page-footer.cc  page-footer.hh  page-header.cc  page-header.hh  register-handler.cc  register-handler.hh  repos-handler.cc  repos-handler.hh  repositories.cc  repositories.hh  (+9 more)
bluegitf/db/: CMakeLists.txt  db.cc  db.hh  main.cc  service.proto
bluegitf/web-server/: CMakeLists.txt  clear-cache-handler.cc  db.cc  load-tpl.cc  load-tpl.hh  main.cc  page-footer.cc  page-footer.hh  page-header.hh  root-handler.cc  session.cc  session.hh
cmake/: ProtocMimosa.cmake
config/: auth-debug.sh  config-dev.json  config-process.json  config.json
doc/: Makefile  design.doch  design.dot  doc.rst  goal.doch  tpl.doch
scissy/: CMakeLists.txt  access.cc  access.hh  archive-handler.cc  archive-handler.hh  authenticator.hh  builtin-authenticator.cc  builtin-authenticator.hh  clear-cache-handler.cc  clear-cache-handler.hh  config.cc  config.hh  config.proto  db-authenticator.cc  db-authenticator.hh  db.cc  db.hh  gen-authorized-keys.cc  gen-authorized-keys.hh  git-archive.cc  git-archive.hh  git-blob.hh  git-commit.cc  git-commit.hh  git-diff.hh  git-patch.hh  git-revwalk.cc  git-revwalk.hh  git-signature.cc  git-signature.hh  git-tree-entry.hh  git-tree.cc  git-tree.hh  group-detail-handler.cc  group-detail-handler.hh  groups-handler.cc  groups-handler.hh  groups.cc  groups.hh  helpers.cc  (+43 more)
scripts/: config-dev.json  config.json  model.sql  scissy-auth-ldap  scissy-init  scissy-set-admin  scissy-upgrade
sql/: migrate-0-1.sql  migrate-1-2.sql  model.dot  model.sql  sample.sql
src/: CMakeLists.txt  bluegitfd.cc  bluegitfd.hh
tests/scripts/: userCreate.sh
www/: bluegitf.less  update-bootstrap.sh  update.sh
www/css/: bluegitf.css  scissy.css
www/html/: footer.html  group-create.html  group-detail.html  group.html  groups.html  header.html  login.html  new-group.html  new-repo.html  page.html  register.html  repo-admin.html  repo-blob.html  repo-commit.html  repo-create.html  repo-log.html  repo-patch.html  repo-summary.html  repo-tree.html  repo.html  repos.html  settings-account.html  settings-ssh-keys.html  settings.html
www/js/: bootstrap.js  bootstrap.min.js  scissy.js
www/tpl/: footer.html  group-detail.html  group-details.html  groups.html  header.html  login.html  new-group.html  new-repo.html  page.html  register.html  registration-succeed.html  repo-list.html  repos.html  settings.html
